--- a/meeting_client/app/src/main/res/layout/activity_add_usersto_meeting.xml
+++ b/meeting_client/app/src/main/res/layout/activity_add_usersto_meeting.xml
@@ -10,14 +10,28 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="Add"
         tools:layout_editor_absoluteX="265dp"
         tools:layout_editor_absoluteY="650dp" />
 
     <ListView
         android:id="@+id/list_view_invited_people"
-        android:layout_width="395dp"
-        android:layout_height="634dp"
+        android:layout_width="273dp"
+        android:layout_height="601dp"
+        android:choiceMode="multipleChoice"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp" />
+        tools:layout_editor_absoluteY="41dp" />
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="249dp"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="651dp">
+
+        <android.support.design.widget.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter an Email" />
+    </android.support.design.widget.TextInputLayout>
+
 </android.support.constraint.ConstraintLayout>
