--- a/meeting_client/app/src/main/res/layout/activity_add_usersto_meeting.xml
+++ b/meeting_client/app/src/main/res/layout/activity_add_usersto_meeting.xml
@@ -9,7 +9,7 @@
     <Button
         android:id="@+id/add_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="51dp"
         android:layout_marginEnd="28dp"
         android:layout_marginBottom="32dp"
         android:text="Add"
@@ -19,7 +19,7 @@
     <ListView
         android:id="@+id/list_view_invited_people"
         android:layout_width="0dp"
-        android:layout_height="443dp"
+        android:layout_height="486dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
@@ -33,21 +33,24 @@
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="31dp"
+        android:layout_width="233dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/add_button"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/EmailInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter an Email" />
+            style="@style/Base.TextAppearance.AppCompat.Large"
+            android:layout_width="228dp"
+            android:layout_height="56dp"
+            android:background="@android:drawable/dialog_holo_light_frame"
+            android:hint="Enter an Email"
+            android:inputType="textEmailAddress" />
+
 
     </android.support.design.widget.TextInputLayout>
 
@@ -56,15 +59,15 @@
         android:layout_width="243dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="28dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="8dp"
         android:text="Remove Checked People"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/list_view_invited_people"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.385" />
 
 </android.support.constraint.ConstraintLayout>
