fix constraints remove button no longer overlaps email input

--- a/meeting_client/app/src/main/res/layout/activity_add_usersto_meeting.xml
+++ b/meeting_client/app/src/main/res/layout/activity_add_usersto_meeting.xml
@@ -10,11 +10,13 @@
         android:id="@+id/add_button"
         android:layout_width="wrap_content"
         android:layout_height="51dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="28dp"
         android:layout_marginBottom="32dp"
         android:text="Add"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textInputLayout" />
 
     <ListView
         android:id="@+id/list_view_invited_people"
@@ -57,17 +59,14 @@
     <Button
         android:id="@+id/removebutton"
         android:layout_width="243dp"
-        android:layout_height="wrap_content"
+        android:layout_height="49dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="28dp"
-        android:layout_marginBottom="8dp"
         android:text="Remove Checked People"
-        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/list_view_invited_people"
-        app:layout_constraintVertical_bias="0.385" />
+        app:layout_constraintTop_toBottomOf="@+id/list_view_invited_people" />
 
 </android.support.constraint.ConstraintLayout>
