Started changing to TextInputLayout

--- a/meeting_client/app/src/main/res/layout/content_event_note_addition.xml
+++ b/meeting_client/app/src/main/res/layout/content_event_note_addition.xml
@@ -8,23 +8,6 @@
     tools:context=".EventNoteAddition"
     tools:showIn="@layout/activity_event_note_addition">
 
-    <TextView
-        android:id="@+id/note_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Note"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023" />
-
     <Button
         android:id="@+id/add_note"
         android:layout_width="125dp"
@@ -42,23 +25,25 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.84" />
 
-    <EditText
-        android:id="@+id/event_note"
-        android:layout_width="335dp"
-        android:layout_height="228dp"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/note_layout"
+        android:layout_width="312dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/text_border"
-        android:ems="10"
-        android:gravity="top"
-        android:inputType="textMultiLine"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/add_note"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.332" />
+        app:layout_constraintVertical_bias="0.153">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/note"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            android:hint="Enter your note here" />
+    </android.support.design.widget.TextInputLayout>
 
 </android.support.constraint.ConstraintLayout>
