--- a/meeting_client/app/src/main/res/layout/content_password_reset.xml
+++ b/meeting_client/app/src/main/res/layout/content_password_reset.xml
@@ -21,8 +21,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.821" />
+        app:layout_constraintTop_toBottomOf="@+id/confirm_layout" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/email_layout"
@@ -50,8 +49,15 @@
         android:id="@+id/password_layout"
         android:layout_width="312dp"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="155dp">
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email_layout"
+        app:layout_constraintVertical_bias="0.027">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/password"
@@ -72,13 +78,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.524">
+        app:layout_constraintTop_toBottomOf="@+id/password_layout"
+        app:layout_constraintVertical_bias="0.207">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/confirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Confirm New Password" />
+            android:hint="Confirm New Password"
+            android:inputType="textPassword" />
     </android.support.design.widget.TextInputLayout>
 </android.support.constraint.ConstraintLayout>
