Modified password reset UI to match server

--- a/meeting_client/app/src/main/res/layout/activity_password_reset_code.xml
+++ b/meeting_client/app/src/main/res/layout/activity_password_reset_code.xml
@@ -28,26 +28,39 @@
         tools:context=".PasswordReset"
         tools:showIn="@layout/activity_password_reset">
 
-        <TextView
-            android:id="@+id/code_msg"
-            android:layout_width="295dp"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/uuid_layout"
+            android:layout_width="312dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="232dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:gravity="center"
-            android:text="Please insert the confirmation code sent to your email."
-            android:textSize="20dp"
-            app:layout_constraintBottom_toTopOf="@+id/code_layout"
+            app:layout_constraintBottom_toTopOf="@+id/token_layout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.621" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/uuid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="UUID"
+                android:inputType="numberPassword" />
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/confirm"
+            android:layout_width="125dp"
+            android:layout_height="66dp"
+            android:text="CONFIRM"
+            android:textSize="20dp"
+            tools:layout_editor_absoluteX="143dp"
+            tools:layout_editor_absoluteY="511dp" />
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/code_layout"
-            android:layout_width="131dp"
+            android:id="@+id/token_layout"
+            android:layout_width="312dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
@@ -55,34 +68,57 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/confirm"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.511"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.768">
+            app:layout_constraintVertical_bias="0.903">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/token"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Code"
-                android:inputType="numberPassword"
-                android:maxLength="5" />
+                android:hint="Token" />
         </android.support.design.widget.TextInputLayout>
 
-        <Button
-            android:id="@+id/confirm"
-            android:layout_width="125dp"
-            android:layout_height="66dp"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/confirm_layout"
+            android:layout_width="312dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="116dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/uuid_layout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.493"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/confirm_pass"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Confirm New Password" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/new_password_layout"
+            android:layout_width="312dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="CONFIRM"
-            android:textSize="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/confirm_layout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.669" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/new_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="New Password" />
+        </android.support.design.widget.TextInputLayout>
 
     </android.support.constraint.ConstraintLayout>
 
