Fixed constraints in Create_a_Meeting

--- a/meeting_client/app/src/main/res/layout/content_event_list_view.xml
+++ b/meeting_client/app/src/main/res/layout/content_event_list_view.xml
@@ -28,7 +28,8 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="From" />
+            android:text="From"
+            android:focusable="true"/>
 
         <TextView
             android:id="@+id/name_label"
