--- a/meeting_client/app/src/main/res/layout/activity_create_a__meeting.xml
+++ b/meeting_client/app/src/main/res/layout/activity_create_a__meeting.xml
@@ -6,15 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".Create_a_Meeting">
 
+
     <ScrollView
         android:layout_width="0dp"
-        android:layout_height="715dp"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -82,7 +86,7 @@
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="Location Details" />
 
             <android.support.design.widget.TextInputLayout
@@ -92,7 +96,7 @@
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/country"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:hint="Country" />
             </android.support.design.widget.TextInputLayout>
 
