Implemented event deletion, AlertDialog box pops up but doesn't cancel

--- a/meeting_client/app/src/main/res/menu/menu_event_details.xml
+++ b/meeting_client/app/src/main/res/menu/menu_event_details.xml
@@ -6,7 +6,7 @@
         android:title="@string/delete_event"
         app:showAsAction="never" />
 
-    <item android:id="@+id/export_event"
+    <item android:id="@+id/export_event_menu"
         android:title="@string/export_event"
         app:showAsAction="never" />
 
