Worked on event creation requests

--- a/meeting_client/app/src/main/res/layout/content_event_creation.xml
+++ b/meeting_client/app/src/main/res/layout/content_event_creation.xml
@@ -183,6 +183,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/create_event_button"
-            android:onClick="submitInvitation"/>
+            android:onClick="createMeetingRequest"/>
     </LinearLayout>
 </ScrollView>
